ui: Changed css styling on metrics graph tooltips to prevent collapse
Currently the time series graphs tooltip overlay has css properties that
allow the content to collapse when it reaches the boundary of the graph.
This can make the information in the tooltip unreadable in certain
cases.

By changing the style controlling the tooltip width, this collapse can
be prevented, maintaining the readability of the content.

Release note (ui change): Updated metric graph tooltip styling to
prevent content collapse.

--- a/pkg/ui/workspaces/db-console/src/views/cluster/components/linegraph/linegraph.styl
+++ b/pkg/ui/workspaces/db-console/src/views/cluster/components/linegraph/linegraph.styl
@@ -37,7 +37,7 @@ $viz-sides = 62px
       margin-top 20px
       z-index 100
       pointer-events: none;
-      width: fit-content;
+      width: max-content;
       border-radius: 5px
       padding: 10px;
       border 1px solid rgba(0,0,0,0.1)
